--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="bower_components/Font-Awesome/css/font-awesome.min.css">
-        <link type="text/css" rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css" />
+        <link type="text/css" rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css" >
+        <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.min.css">
         <link type="text/css" rel="stylesheet" href="css/index.css" />
         <script type="text/javascript">
             window.userId = "<%=user.userId%>";
@@ -47,6 +48,7 @@
         <script type="text/javascript" src="bower_components/angular/angular.min.js" ></script>
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js" ></script>
         <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js" ></script>
+        <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
