--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_cn">
+<html lang="zh_cn" ng-app="app">
     <head>
         <meta charset="utf-8">
         <title>首页</title>
@@ -15,7 +15,7 @@
             window.userId = "<%=user.userId%>";
         </script>
     </head>
-    <body  ng-app="app">
+    <body>
         <nav class="navbar navbar-default" role="navigation" ng-controller="NavBarController">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/">Node<b>CRM</b></a>
@@ -49,6 +49,7 @@
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js" ></script>
         <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js" ></script>
         <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.min.js"></script>
+        <script type="text/javascript" src="js/controllers/userController.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
