--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,9 @@
         <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.min.js"></script>
         <script type="text/javascript" src="js/controllers/userController.js"></script>
+        <script type="text/javascript" src="js/controllers/roleController.js"></script>
+        <script type="text/javascript" src="js/controllers/menuController.js"></script>
+        <script type="text/javascript" src="js/controllers/logController.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
